tests/ui/loop-match/invalid-attribute.stderr
error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:14:1
   |
LL | #[loop_match]
   | ^^^^^^^^^^^^^
...
LL | struct S {
   | -------- not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:15:1
   |
LL | #[const_continue]
   | ^^^^^^^^^^^^^^^^^
LL | #[repr(C)]
LL | struct S {
   | -------- not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:28:1
   |
LL | #[loop_match]
   | ^^^^^^^^^^^^^
LL | #[const_continue]
LL | extern "C" fn ok() {}
   | ------------------ not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:29:1
   |
LL | #[const_continue]
   | ^^^^^^^^^^^^^^^^^
LL | extern "C" fn ok() {}
   | ------------------ not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:33:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
LL |     #[const_continue]
LL |     || {};
   |     -- not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:34:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
LL |     || {};
   |     -- not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:38:9
   |
LL |         #[loop_match]
   |         ^^^^^^^^^^^^^
LL |         #[const_continue]
LL |         5
   |         - not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:39:9
   |
LL |         #[const_continue]
   |         ^^^^^^^^^^^^^^^^^
LL |         5
   |         - not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:23:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
LL |     #[const_continue]
LL |     extern "C" fn invoke(&self);
   |     ---------------------------- not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:24:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
LL |     extern "C" fn invoke(&self);
   |     ---------------------------- not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:9:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
LL |     #[const_continue]
LL |     fn f();
   |     ------- not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:10:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
LL |     fn f();
   |     ------- not a break expression

error: `#[loop_match]` should be applied to a loop
  --> $DIR/invalid-attribute.rs:5:1
   |
LL | / #![feature(loop_match)]
LL | | #![loop_match]
   | | ^^^^^^^^^^^^^^
LL | | #![const_continue]
...  |
LL | |     };
LL | | }
   | |_- not a loop

error: `#[const_continue]` should be applied to a break expression
  --> $DIR/invalid-attribute.rs:6:1
   |
LL | / #![feature(loop_match)]
LL | | #![loop_match]
LL | | #![const_continue]
   | | ^^^^^^^^^^^^^^^^^^
...  |
LL | |     };
LL | | }
   | |_- not a break expression

error: aborting due to 14 previous errors

